--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Emotional Support Objects
+title: About Me
 author: Stephen Feldman
 email: sfeldman@ebnet.org
 description: > # this means to ignore newlines until "baseurl:"
